--- a/TreasureSense/app/build.gradle
+++ b/TreasureSense/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 17
+    buildToolsVersion "20.0.1"
 
     defaultConfig {
         applicationId "edu.berkeley.mims.treasuresense"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 17
         versionCode 1
         versionName "1.0"
     }
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.getpebble:pebblekit:2.6.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.google.android:support-v4:r7@jar'
 }
